--- a/.syncpackrc
+++ b/.syncpackrc
@@ -22,14 +22,7 @@
 			]
 		},
 		{
-			"dependencies": [
-				"@types/react"
-			],
-			"dependencyTypes": [
-				"devDependencies"
-			],
-			"pinVersion": "^17.0.2",
-			"packages": [
+			"dep": [
 				"**"
 			]
 		},
