--- a/tools/monorepo-utils/package.json
+++ b/tools/monorepo-utils/package.json
@@ -6,6 +6,7 @@
 	"homepage": "https://github.com/woocommerce/woocommerce",
 	"license": "GPLv2",
 	"repository": "woocommerce/woocommerce",
+	"main": "dist/index.js",
 	"dependencies": {
 		"chalk": "^4.1.2",
 		"commander": "^9.4.0",
