--- a/.github/workflows/release-code-freeze.yml
+++ b/.github/workflows/release-code-freeze.yml
@@ -50,6 +50,7 @@ jobs:
 
     test-previous-job:
         needs: verify-code-freeze
+        runs-on: ubuntu-20.04
         steps:
             - name: 'Install PHP'
               uses: shivammathur/setup-php@8e2ac35f639d3e794c1da1f28999385ab6fdf0fc
