--- a/.github/workflows/release-code-freeze.yml
+++ b/.github/workflows/release-code-freeze.yml
@@ -41,7 +41,7 @@ jobs:
 
             - name: 'Check whether today is the code freeze day'
               id: check-freeze
-              run: pnpm utils code-freeze verify-day -g
+              run: pnpm utils code-freeze verify-day -g -o $TIME_OVERRIDE
 
     maybe-create-next-milestone-and-release-branch:
         name: 'Maybe create next milestone and release branch'
