--- a/.github/workflows/release-code-freeze.yml
+++ b/.github/workflows/release-code-freeze.yml
@@ -64,7 +64,7 @@ jobs:
               run: pnpm run utils code-freeze branch -g -o ${{ github.repository_owner }}
 
             - name: Prepare trunk for next development cycle
-              id: branch
+              id: prep-trunk
               if: steps.check-freeze.outputs.freeze == 'true'
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
