--- a/.github/workflows/release-code-freeze.yml
+++ b/.github/workflows/release-code-freeze.yml
@@ -29,6 +29,7 @@ jobs:
         permissions:
             contents: write
             issues: write
+            pull-requests: write
         outputs:
             freeze: ${{ steps.check-freeze.outputs.freeze }}
             nextReleaseBranch: ${{ steps.branch.outputs.nextReleaseBranch }}
