--- a/packages/js/api/package.json
+++ b/packages/js/api/package.json
@@ -33,8 +33,7 @@
 		"turbo:build": "pnpm run clean && npm run compile",
 		"turbo:test": "jest",
 		"test": "pnpm -w exec turbo run turbo:test --filter=$npm_package_name",
-		"prepare": "composer install",
-		"changelog": "composer exec -- changelogger",
+		"changelog": "node ../../../tools/monorepo-utils/dist/changelogger.js",
 		"clean": "rm -rf ./dist ./tsconfig.tsbuildinfo",
 		"compile": "tsc --project tsconfig.json",
 		"prepack": "pnpm run build",
