--- a/packages/js/create-product-editor-block/package.json
+++ b/packages/js/create-product-editor-block/package.json
@@ -8,8 +8,7 @@
 		"pnpm": "^8.3.1"
 	},
 	"scripts": {
-		"postinstall": "composer install",
-		"changelog": "composer exec -- changelogger"
+		"changelog": "node ../../../tools/monorepo-utils/dist/changelogger.js"
 	},
 	"repository": {
 		"type": "git",
