--- a/packages/js/eslint-plugin/package.json
+++ b/packages/js/eslint-plugin/package.json
@@ -41,8 +41,7 @@
 		"access": "public"
 	},
 	"scripts": {
-		"prepare": "composer install",
-		"changelog": "composer exec -- changelogger",
+		"changelog": "node ../../../tools/monorepo-utils/dist/changelogger.js",
 		"lint": "eslint ./rules ./configs",
 		"lint:fix": "eslint ./rules ./configs --fix"
 	},
