--- a/packages/js/product-editor/package.json
+++ b/packages/js/product-editor/package.json
@@ -116,8 +116,7 @@
 	"scripts": {
 		"turbo:build": "pnpm run build:js && pnpm run build:css",
 		"turbo:test": "jest --config ./jest.config.json",
-		"prepare": "composer install",
-		"changelog": "composer exec -- changelogger",
+		"changelog": "node ../../../tools/monorepo-utils/dist/changelogger.js",
 		"clean": "pnpm exec rimraf tsconfig.tsbuildinfo build build-*",
 		"build": "pnpm -w exec turbo run turbo:build --filter=$npm_package_name",
 		"test": "pnpm -w exec turbo run turbo:test --filter=$npm_package_name",
