--- a/packages/js/tracks/package.json
+++ b/packages/js/tracks/package.json
@@ -33,8 +33,7 @@
 	},
 	"scripts": {
 		"turbo:build": "tsc --project tsconfig.json && tsc --project tsconfig-cjs.json",
-		"prepare": "composer install",
-		"changelog": "composer exec -- changelogger",
+		"changelog": "node ../../../tools/monorepo-utils/dist/changelogger.js",
 		"clean": "pnpm exec rimraf tsconfig.tsbuildinfo build build-*",
 		"build": "pnpm -w exec turbo run turbo:build --filter=$npm_package_name",
 		"lint": "eslint src",
