--- a/plugins/woocommerce-beta-tester/composer.json
+++ b/plugins/woocommerce-beta-tester/composer.json
@@ -12,8 +12,7 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^6.5 || ^7.5",
-		"woocommerce/woocommerce-sniffs": "^0.1.3",
-		"automattic/jetpack-changelogger": "3.3.0"
+		"woocommerce/woocommerce-sniffs": "^0.1.3"
 	},
 	"scripts": {
 		"test": [
