--- a/plugins/woocommerce-beta-tester/package.json
+++ b/plugins/woocommerce-beta-tester/package.json
@@ -52,7 +52,7 @@
 	},
 	"scripts": {
 		"postinstall": "composer install",
-		"changelog": "composer exec -- changelogger",
+		"changelog": "node ../../tools/monorepo-utils/dist/changelogger.js",
 		"build": "pnpm -w exec turbo run turbo:build --filter=$npm_package_name",
 		"turbo:build": "pnpm run build:admin && pnpm run uglify",
 		"build:admin": "wp-scripts build",
