--- a/plugins/woocommerce/package.json
+++ b/plugins/woocommerce/package.json
@@ -17,7 +17,7 @@
 		"turbo:test": "pnpm test:unit",
 		"preinstall": "npx only-allow pnpm",
 		"postinstall": "composer install",
-		"changelog": "composer exec -- changelogger",
+		"changelog": "node ../../tools/monorepo-utils/dist/changelogger.js",
 		"build": "pnpm -w exec turbo run turbo:build --filter=$npm_package_name",
 		"test": "pnpm -w exec turbo run turbo:test --filter=$npm_package_name",
 		"lint": "pnpm lint:php",
